Final commit? Add whatsthis tooltips

--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,4 +1,4 @@
-<h1>Item checkout</h1>
+<h1>Item checkout</h1>&nbsp;&nbsp;<whatsthis [ident]="4"></whatsthis>
 <h2>Welcome, {{name}}</h2><br/>
 <app-notifications [username]="username"></app-notifications>
 <p *ngIf="msg">{{msg}}</p>
