--- a/src/app/reports/reports.component.html
+++ b/src/app/reports/reports.component.html
@@ -1,4 +1,5 @@
-<h1>What data would you like to see?</h1>
+<h1>What data would you like to see?</h1>&nbsp;&nbsp;<whatsthis [ident]="7"></whatsthis>
+<br/>
 <label *ngFor="let btn of buttons; let i = index">
   <input type="radio"
     name="report-type"
