--- a/src/app/location-edit/location-edit.component.html
+++ b/src/app/location-edit/location-edit.component.html
@@ -4,7 +4,7 @@
 <h3>Library name:</h3>
 <input name="locname" type="text" [(ngModel)]="locname"/>
 <h3>Preferred color scheme:</h3>
-<p>The header up top is colored based on this. Default #f7f7f7.</p>
+<p>The header up top will be colored based on this. Default #f7f7f7. (This was actually not implemented for the FBLA demo and has no effect, but I do hope to work on it after competition.)</p>
 <input name="color" [(colorPicker)]="color" [style.background]="color" [value]="color" [cpFallbackColor]="initialColor"/>
 <h3>Self-checkout account password:</h3>
 <p>This will be the password of the account that all your library's patrons can check out books from.</p>
