--- a/src/app/media-search/media-suggestion.component.html
+++ b/src/app/media-search/media-suggestion.component.html
@@ -1,4 +1,4 @@
-<h2 *ngIf="suggested.length">{{heading}}</h2>&nbsp;&nbsp;<whatsthis [ident]="6"></whatsthis>
+<h2 *ngIf="suggested.length">{{heading}}</h2>
 <p>{{msg}}</p>
 <ul>
   <li *ngFor="let item of suggested" class="item-box">
