Some final explanatory comments before my FBLA heads submit this thing

--- a/src/app/generic-header/generic-header.component.html
+++ b/src/app/generic-header/generic-header.component.html
@@ -7,3 +7,4 @@
     >{{button.text}}</a>
   </nav>
 </div>
+<!-- the "{{inbetween}}" stuff is there so that a specific relative link can be generated if necessary -->
