--- a/src/app/role-detail/role-detail.component.html
+++ b/src/app/role-detail/role-detail.component.html
@@ -10,7 +10,7 @@
 <whatsthis ident="2"></whatsthis>
 <form name="role-information" (ngSubmit)="submit()" *ngIf="rID">
     <app-perms [editable]="checkView()" [arr]="permArr"></app-perms>
-    <app-maxes [editable]="checkView()" [arr]="maxArr"></app-maxes>
+    <app-limits [editable]="checkView()" [arr]="maxArr"></app-limits>
     <app-locks [editable]="checkView()" [arr]="lockArr"></app-locks>
     <input *ngIf="globals.perms.raw == 127 || checkView()" type="submit" value="Submit"/>
 </form>
