Fix stuff, greatly optimize reports queries with JOIN

--- a/src/app/reports/reports.component.html
+++ b/src/app/reports/reports.component.html
@@ -1,5 +1,11 @@
 <h1>What data would you like to see?</h1>&nbsp;&nbsp;<whatsthis [ident]="7"></whatsthis>
 <br/>
+<b>View reports from:</b><br/>
+<input type="radio" name="from-when" (change)="reportLive = !$event.target.checked">This instant
+<br/>
+<input type="radio" name="from-when" (change)="reportLive = $event.target.checked" [attr.disabled]="!lastReportDate || null">{{lastReportDate}} (date of last-recorded weekly report)
+<br/><br/>
+<b>View reports of:</b><br/>
 <label *ngFor="let btn of buttons; let i = index">
   <input type="radio"
     name="report-type"
@@ -8,6 +14,7 @@
   <br/>
 </label>
 <br/><br/>
+<b>Sort reports by:</b><br/>
 <input #perMember
   type="radio"
   name="sort-by"
@@ -23,4 +30,4 @@ Per role<br/>
   name="sort-by"
   (change)="onSortChange(total.value, 'all')">
 Total<br/>
-<button (click)="getReport()" [class.invalid]="!(any() && sortBy)">Submit</button>
+<button (click)="getReport()" [class.invalid]="!(any() && sortBy) || reportLive === null">Submit</button>
