Implement weekly report caching

--- a/src/app/reports/reports.component.html
+++ b/src/app/reports/reports.component.html
@@ -1,9 +1,9 @@
 <h1>What data would you like to see?</h1>&nbsp;&nbsp;<whatsthis [ident]="7"></whatsthis>
 <br/>
 <b>View reports from:</b><br/>
-<input type="radio" name="from-when" (change)="reportLive = !$event.target.checked">This instant
+<input type="radio" name="from-when" (change)="reportLive = $event.target.checked">This instant
 <br/>
-<input type="radio" name="from-when" (change)="reportLive = $event.target.checked" [attr.disabled]="!lastReportDate || null">{{lastReportDate}} (date of last-recorded weekly report)
+<input type="radio" name="from-when" (change)="reportLive = !$event.target.checked" [attr.disabled]="!lastReportDate || null">{{lastReportDate}} (date of last-recorded weekly report)
 <br/><br/>
 <b>View reports of:</b><br/>
 <label *ngFor="let btn of buttons; let i = index">
