--- a/src/app/report-view/report-view.component.html
+++ b/src/app/report-view/report-view.component.html
@@ -1,16 +1,18 @@
-<button (click)="location.back()">Go back</button>
-<h1>{{key | titlecase}}</h1>
-<h3>{{sort.replace('_', ' ') | titlecase}}</h3>
-<ul>
-  <span *ngFor="let dtm of data">
-    <li *ngIf="check(dtm.res)">
-      <b>{{dtm.ident}}</b>
-      <br/>
-      <ul>
-        <li *ngFor="let item of dtm.res">
-          {{item}}
-        </li>
-      </ul>
-    </li>
-  </span>
-</ul>
+<button (click)="location.back()">Go back</button>&nbsp;<button class="new" (click)="printReport()">Print</button>
+<div id="printable-report">
+  <h1>{{key | titlecase}}: {{date}}</h1>
+  <h3>{{sort.replace('_', ' ') | titlecase}}</h3>
+  <ul>
+    <span *ngFor="let dtm of data">
+      <li *ngIf="check(dtm.res)">
+        <b>{{dtm.ident}}</b>
+        <br/>
+        <ul>
+          <li *ngFor="let item of dtm.res">
+            {{item}}
+          </li>
+        </ul>
+      </li>
+    </span>
+  </ul>
+</div>
