--- a/src/app/mgmt-accounts/mgmt-accounts.component.css
+++ b/src/app/mgmt-accounts/mgmt-accounts.component.css
@@ -8,3 +8,19 @@ li ul li {
 li ul li:hover {
   text-decoration: none;
 }
+#csv-upload-container {
+  margin: 2px;
+  border-style: solid;
+  border-color: #dcdcdc;
+  border-radius: 5px;
+  border-width: 1px;
+  padding: 10px;
+  width: fit-content;
+}
+.csv-upload-browse {
+  border-color: #e3e3e3;
+  background-color: #f0f0f0;
+}
+h3 {
+  display: inline-block;
+}
