--- a/src/app/media-search/media-search-bar.component.html
+++ b/src/app/media-search/media-search-bar.component.html
@@ -39,12 +39,12 @@
       <span class="link" *ngIf="globals.perms.names.canManageMedia" routerLink="{{breadcrumbs}}edit/{{item.mid}}"> (edit)</span>
       <span class="link bad" *ngIf="!forbidDeletion && globals.perms.names.canManageMedia" (click)="del(item.mid); items.splice(i, 1)"> (delete)</span>
       <br/>
-      <span class="author">{{item.author | titlecase}}</span>
+      <span class="author">{{item.author | titlespace}}</span>
       <br/>
-      <span class="genre">{{item.genre | titlecase}}</span>
+      <span class="genre">{{item.genre | titlespace}}</span>
       <br/>
       <br/>
-      <aside class="type">{{item.type | titlecase}}</aside>
+      <aside class="type">{{item.type | titlespace}}</aside>
       <aside class="barcode">{{item.mid}}</aside>
     </div>
       <img *ngIf="item.image && item.image != 'None'" [src]="item.image" [alt]="item.title">
