--- a/src/app/media-search/media-suggestion.component.html
+++ b/src/app/media-search/media-suggestion.component.html
@@ -6,12 +6,12 @@
       <span class="title link" routerLink="{{breadcrumbs}}{{item.mid}}">{{item.title}}</span>
       <span class="link" *ngIf="globals.canEditMedia" routerLink="../edit/{{item.mid}}"> (edit)</span>
       <br/>
-      <span class="author">{{item.author | titlecase}}</span>
+      <span class="author">{{item.author | titlespace}}</span>
       <br/>
-      <span class="genre">{{item.genre | titlecase}}</span>
+      <span class="genre">{{item.genre | titlespace}}</span>
       <br/>
       <br/>
-      <aside class="type">{{item.type | titlecase}}</aside>
+      <aside class="type">{{item.type | titlespace}}</aside>
       <aside class="barcode">{{item.mid}}</aside>
     </div>
       <img *ngIf="item.image && item.image != 'None'" [src]="item.image" [alt]="item.title">
