--- a/src/app/personal-media/personal-media.component.html
+++ b/src/app/personal-media/personal-media.component.html
@@ -6,12 +6,12 @@
       <span class="title link" routerLink="/home/media/{{item.mid}}">{{item.title}}</span>
       <span class="link" *ngIf="globals.perms.names.canManageMedia" routerLink="/home/media/edit/{{item.mid}}"> (edit)</span>
       <br/>
-      <span class="author">{{item.author | titlecase}}</span>
+      <span class="author">{{item.author | titlespace}}</span>
       <br/>
-      <span class="genre">{{item.genre | titlecase}}</span>
+      <span class="genre">{{item.genre | titlespace}}</span>
       <br/>
       <br/>
-      <aside class="type">{{item.type | titlecase}}</aside>
+      <aside class="type">{{item.type | titlespace}}</aside>
       <aside class="barcode">{{item.mid}}</aside>
       <aside>Due: {{item.due_date}}</aside>
     </div>
