--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,7 +2,7 @@
 <p>
   Code is available at <a href="https://gitlab.com/hdtrhn/fbla-webapp">my GitLab repo</a>.
   <br/>
-  Made by ***REMOVED*** for <i><a href="http://www.fbla-pbl.org/competitive-event/coding-programming/">Coding & Programming</a></i> as part of FBLA,
+  Made for <i><a href="http://www.fbla-pbl.org/competitive-event/coding-programming/">Coding & Programming</a></i> as part of FBLA,
   <br/>
   with liberal use of these technologies (without which none of this would have been possible):
 </p>
@@ -21,7 +21,7 @@
 </ul>
 <p>And <a href="https://heroku.com">Heroku</a> for hosting, of course.</p>
 <p>
-  An early draft of my design spec is also viewable in the GitLab repo, right <a href="https://gitlab.com/hdtrhn/fbla-webapp/blob/master/spec/d+ds.md">here</a>. It includes info about how the database and backend works, among other things.
+  An early draft of my design spec is also viewable in the public repo at <b>spec/d+ds.md</b>. It includes info about how the database and backend works, among other things.
   <br/><i><small>(Note that it's not properly-formatted markdown; I wrote it as monospaced syntax-highlighted text, so please click the "&lt;/&gt;" button in the top bar to view it as such.)</small></i>
   <br/>
   Some things were added after I wrote it, and some things eventually nixed on account of inviability, but it's still quite good as a surface-level run-through to supplement the HELP articles.
